Merge results from finished threads instead of waiting for all threads to finish.
Not a huge difference overall but no reason to wait.

Also experiment with a few other compiler flags and attempt to use
jitwatch to understand what the jit is doing.